--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
         and more recently with desktop publishing software like Aldus PageMaker \
         including versions of Lorem Ipsum.</string>
     <string name="save">save</string>
+    <string name="group_1">Group 1</string>
 </resources>
